# Grievance-Redressal-Chatbot

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
core_logic/: chatbot_web.py  config_web.py  detector_web.py  mappings_web.py
static/: form_script.js  script.js  style.css
submissions/: grievances.json
templates/: corruption_form.html  funds_form.html  gormint.html  govt_service_form.html  index.html  infrastructure_form.html
